fixed forms covering blurb on splash

--- a/react-app/src/components/auth/SignUpForm.css
+++ b/react-app/src/components/auth/SignUpForm.css
@@ -47,6 +47,6 @@
 
 @media only screen and (max-width: 740px){
     .sign-up-page{
-        top: 30%;
+        top: 33%;
     }
 }
